# rakam_systems

./: .bumpversion.cfg  .gitignore  .pypirc  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LLM_GATEWAY_IMPLEMENTATION.md  MANIFEST.in  MODULE.bazel  QUICK_START_LLM_GATEWAY.md  QUICK_START_LLM_GATEWAY_TOOLS.md  README.md  README.rst  build_requirements.py  cliff.toml  components_config.yaml  pyproject.toml  requirements.txt  setup.cfg
ai-components/agents/: README.md  main.py  pyproject.toml
ai-components/agents/src/rakam_systems_agent/: __init__.py
ai-components/agents/src/rakam_systems_agent/components/: base_agent.py
ai-components/agents/src/rakam_systems_agent/components/chat_history/: __init__.py  json_chat_history.py  postgres_chat_history.py  sql_chat_history.py
ai-components/agents/src/rakam_systems_agent/components/llm_gateway/: README.md  __init__.py  gateway_factory.py  mistral_gateway.py  openai_gateway.py
ai-components/agents/src/rakam_systems_agent/components/model_gateway/: __init__.py  gateway.py  metering.py
ai-components/agents/src/rakam_systems_agent/components/tools/: LLM_GATEWAY_TOOLS_README.md  __init__.py  example_tools.py  llm_gateway_tools.py  search_tool.py
ai-components/agents/src/rakam_systems_agent/server/: README.md  mcp_server_agent.py
ai-components/agents/src/rakam_systems_agent/tests/: test_agent.py  test_chat_history.py  test_example_tools.py  test_llm_gateway.py  test_model_gateway.py
ai-components/vector-store/: README.md  main.py  pyproject.toml
ai-components/vector-store/src/rakam_systems_vectorstore/: MANIFEST.in  README.md  __init__.py  _django_setup.py  config.py  core.py  pyproject.toml  setup.py  stores.py
ai-components/vector-store/src/rakam_systems_vectorstore/components/chunker/: advanced_chunker.py  text_chunker.py
ai-components/vector-store/src/rakam_systems_vectorstore/components/embedding_model/: configurable_embeddings.py  gateway_embeddings.py  openai_embeddings.py
ai-components/vector-store/src/rakam_systems_vectorstore/docs/: ARCHITECTURE.md  INSTALLATION.md  PACKAGE_STRUCTURE.md  QUICK_INSTALL.md
ai-components/vector-store/src/rakam_systems_vectorstore/server/: README.md  mcp_server_vector.py
ai-components/vector-store/src/rakam_systems_vectorstore/tests/: test_chunker.py  test_code_loader.py  test_eml_loader.py  test_faiss.py  test_gateway_embeddings.py  test_md_loader.py  test_stores_shim.py  test_tabular_loader.py  test_vs_config.py
cli/: BUILD.bazel  README.md  pyproject.toml
cli/scripts/: check_cli_docs.py
cli/src/rakam_cli/: cli.py
cli/src/rakam_cli/tests/: test_cli.py  test_decorator.py  test_metrics.py  test_modules_loader.py  test_print.py
cli/src/rakam_systems_cli/: cli.py  decorators.py
cli/src/rakam_systems_cli/tests/: test_cli.py  test_decorator.py  test_metrics.py  test_modules_loader.py  test_print.py
cli/src/rakam_systems_cli/utils/: decorator_utils.py  metric.py  print.py
core/: BUILD.bazel  README.md  pyproject.toml
core/src/rakam_systems_core/: __init__.py  base.py  config_loader.py  config_schema.py  embedding_consistency.py  tracking.py
core/src/rakam_systems_core/ai_core/: __init__.py  vs_core.py
core/src/rakam_systems_core/ai_core/interfaces/: __init__.py  chat_history.py
core/src/rakam_systems_core/ai_core/mcp/: README.md  mcp_server.py
core/src/rakam_systems_core/interfaces/: __init__.py  embedding_model.py  loader.py  tool.py  tool_invoker.py  tool_loader.py  tool_registry.py
core/src/rakam_systems_core/mcp/: README.md  mcp_server.py
core/src/rakam_systems_core/tests/: test_agent.py  test_base.py  test_config.py  test_config_loader.py  test_config_schema.py  test_embedding_consistency.py  test_hello.py  test_mcp.py  test_model_ref.py  test_tool_registry.py  test_tracking_manager.py  test_vs_core.py
rakam_systems/agent/: pyproject.toml
rakam_systems/agent/components/: __init__.py  base_agent.py
rakam_systems/agent/components/chat_history/: json_chat_history.py  postgres_chat_history.py  sql_chat_history.py
rakam_systems/agent/components/llm_gateway/: __init__.py  gateway_factory.py  mistral_gateway.py  openai_gateway.py
rakam_systems/agent/components/tools/: example_tools.py  llm_gateway_tools.py  search_tool.py
rakam_systems/agent/server/: README.md  __init__.py  mcp_server_agent.py
rakam_systems/vectorestore/: __init__.py  pyproject.toml  setup.py
rakam_systems/vectorestore/components/chunker/: __init__.py  advanced_chunker.py  text_chunker.py
rakam_systems/vectorestore/components/embedding_model/: configurable_embeddings.py  openai_embeddings.py
rakam_systems/vectorestore/components/loader/: adaptive_loader.py  code_loader.py  doc_loader.py  eml_loader.py  html_loader.py  md_loader.py  odt_loader.py  pdf_loader.py  pdf_loader_light.py  tabular_loader.py
rakam_systems/vectorestore/components/loader/docs/: DOC_LOADER_README.md  EML_LOADER_README.md  PDF_LOADER_ARCHITECTURE.md  TABULAR_LOADER_README.md
rakam_systems/vectorestore/components/vectorstore/: apps.py  configurable_pg_vector_store.py  faiss_vector_store.py  models.py  pg_models.py  pg_vector_store.py
rakam_systems/vectorestore/docs/: ARCHITECTURE.md  INSTALLATION.md  PACKAGE_STRUCTURE.md  QUICK_INSTALL.md
rakam_systems/vectorestore/server/: README.md  __init__.py  mcp_server_vector.py
tools/: BUILD.bazel  DOC.md  README.md  pyproject.toml  requirements.txt
tools/src/rakam_systems_tools/: __init__.py
tools/src/rakam_systems_tools/evaluation/: __init__.py  client.py  schema.py
tools/src/rakam_systems_tools/evaluation/observability/: __init__.py  base.py  factory.py  langfuse.py  mlflow.py
tools/src/rakam_systems_tools/evaluation/tracking/: base.py  langfuse.py  mlflow.py
tools/src/rakam_systems_tools/scripts/: langfuse_demo.py  langfuse_nested_demo.py  mlflow_demo.py  mlflow_nested_demo.py
tools/src/rakam_systems_tools/tests/: test_client.py  test_eval_schema.py  test_observability.py  test_s3.py  test_tracking.py  test_utils.py
tools/src/rakam_systems_tools/utils/: logging.py
tools/src/rakam_systems_tools/utils/s3/: __init__.py  s3.py
(+338 files in other folders)
