[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[project]
name = "rakam-systems"
version = "0.3.0"
description = "Rakam Systems - Modular AI framework with agents, vectorstore, and LLM gateway"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Mohamed Hilel", email = "mohammedjassemhlel@gmail.com"},
    {name = "Peng Zheng", email = "pengzheng990630@outlook.com"},
    {name = "somebodyawesome-dev", email = "luckynoob2011830@gmail.com"}

]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    
    "rakam-systems-tools>=0.2.0",
    "rakam-systems-agent[all]==0.1.2",
    "rakam-systems-vectorstore[all]==0.1.2",
    "rakam-systems-cli==0.2.5"
]
[tool.uv.build-backend]
module-root = "src"
exclude = ["**/tests/**"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
