[metadata]
name = rakam-systems
version = 0.2.2
url = https://github.com/Rakam-AI/rakam_systems
author = Mohamed Hilel
author_email = mohammedjassemhlel@gmail.com
description = rakam_systems package.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.8,<4.0
install_requires =
    beautifulsoup4==4.12.3
    channels==4.0.0
    colorlog==6.8.2
    drf-spectacular==0.27.1
    faiss-cpu==1.8.0.post1
    joblib==1.4.2
    openai==1.37.0
    pandas==2.0.0
    playwright==1.45.0
    pre-commit==3.5.0
    psycopg2-binary==2.9.9
    python-dotenv==1.0.1
    python-magic==0.4.27
    requests==2.31.0
    sentence-transformers==2.6.1
    torch==2.2.2
    tqdm==4.66.4
    pymupdf==1.24.11
    pymupdf4llm==0.0.17

package_dir = 
    = .
packages = find:
include_package_data = True

[options.packages.find]
where = .
exclude =
    test*
