[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[project]
name = "rakam-systems-cli"
version = "0.2.7"
description = "RAKAM SYSTEMS CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Mohamed Bachar Touil" }
]
dependencies = [
    "psutil>=7.2.1",
    "rakam-systems-tools>=0.2.2",
    "typer>=0.12.5,<0.22.0",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pytest>=8.3.5",
    "twine>=6.1.0",
    "pytest-cov>=5.0.0",
]

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.uv.build-backend]
module-root = "src"
exclude = ["**/tests/**"]

[project.scripts]
rakam = "rakam_systems_cli.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
