[project]
name = "rakam-systems-core"
version = "0.1.1rc7"
description = "A Package containing core logic and schema for rakam-systems"
readme = "README.md"
authors = [
    {name = "Mohamed Hilel", email = "mohammedjassemhlel@gmail.com"},
    {name = "Peng Zheng", email = "pengzheng990630@outlook.com"},
    {name = "somebodyawesome-dev", email = "luckynoob2011830@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "rakam-systems-tools==0.1.0a1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
