[project]
name = "rakam-systems-core"
version = "0.1.2"
description = "A Package containing core logic and schema for rakam-systems"
readme = "README.md"
authors = [
    {name = "Mohamed Hilel", email = "mohammedjassemhlel@gmail.com"},
    {name = "Peng Zheng", email = "pengzheng990630@outlook.com"},
    {name = "somebodyawesome-dev", email = "luckynoob2011830@gmail.com"}
]
requires-python = ">=3.10"

dependencies = [
    "pydantic",
    "PyYAML"
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pytest>=8.3.5",
    "twine>=6.1.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"


[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.build-backend]
module-root = "src"
exclude = ["**/tests/**"]

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"
