[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[project]
name = "rakam-systems-agent"
version = "0.1.4"
description = "AI Agents framework with Pydantic AI support and LLM Gateway integration"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Mohamed Hilel", email = "mohammedjassemhlel@gmail.com"},
    {name = "Peng Zheng", email = "pengzheng990630@outlook.com"}
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "rakam-systems-core>=0.1.2",
    "rakam-systems-tools>=0.2.1",
    "pydantic>=2.11.5,<3.0.0",
    "pydantic-ai>=1.11.0,<2.0.0",
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]


[project.optional-dependencies]
# LLM providers
llm-providers = [
    "openai>=1.37.0,<3.0.0",
    "mistralai>=1.9.0,<2.0.0",
    "tiktoken>=0.7.0,<1.0.0",
]

# PostgreSQL chat history backend
postgres = [
    "psycopg2-binary>=2.9.9,<3.0.0",
]

# All optional dependencies
all = [
    "rakam-systems-agent[llm-providers]",
    "rakam-systems-agent[postgres]",
]


[project.urls]
Homepage = "https://github.com/Rakam-AI/rakam_systems-inhouse"
Documentation = "https://github.com/Rakam-AI/rakam_systems-inhouse"
Repository = "https://github.com/Rakam-AI/rakam_systems-inhouse"



[tool.uv.build-backend]
module-root = "src"
exclude = ["**/tests/**"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
