[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rakam-systems-ai-agents"
version = "0.1.0"
description = "AI Agents framework with Pydantic AI support and LLM Gateway integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Mohamed Hilel", email = "mohammedjassemhlel@gmail.com"},
    {name = "Peng Zheng", email = "pengzheng990630@outlook.com"}
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

# Core dependencies - required for AI Agents functionality
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-ai>=1.11.0,<2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# LLM providers
llm-providers = [
    "openai>=1.37.0,<3.0.0",
    "mistralai>=1.9.0,<2.0.0",
    "tiktoken>=0.12.0,<1.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# All optional dependencies
all = [
    "rakam-systems-ai-agents[llm-providers]",
]

[project.urls]
Homepage = "https://github.com/Rakam-AI/rakam_systems-inhouse"
Documentation = "https://github.com/Rakam-AI/rakam_systems-inhouse"
Repository = "https://github.com/Rakam-AI/rakam_systems-inhouse"

[tool.setuptools]
packages = ["rakam_systems.ai_agents"]
include-package-data = true

[tool.setuptools.package-data]
"rakam_systems.ai_agents" = ["**/*.yaml", "**/*.yml", "**/*.json", "**/*.md"]
