[project]
name = "rakam-system-vectorstore"
version = "0.1.0"
description = "Modular vector store and RAG components for semantic search and retrieval"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Mohamed Hilel", email = "mohammedjassemhlel@gmail.com"},
    {name = "Peng Zheng", email = "pengzheng990630@outlook.com"}
]
keywords = ["vector-store", "embeddings", "rag", "semantic-search", "pgvector", "faiss"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies required for base functionality
dependencies = [


    "rakam-system-core",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
# PostgreSQL backend with Django ORM
postgres = [
    "psycopg2-binary>=2.9.9",
    "django>=4.0.0",
]

# FAISS backend for in-memory vector search
faiss = [
    "faiss-cpu>=1.12.0",
]

# Local embedding models using SentenceTransformers
local-embeddings = [
    "sentence-transformers>=5.1.0",
    "torch>=2.0.0",
]

# OpenAI embeddings
openai = [
    "openai>=1.0.0",
]

# Cohere embeddings
cohere = [
    "cohere>=4.0.0",
]

# Document loaders for various file types
loaders = [
    "python-magic>=0.4.27",
    "beautifulsoup4>=4.12.0",
    "python-docx>=1.2.0",
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.17",
    "docling==2.62.0",
    "chonkie==1.4.2",
    "odfpy==1.4.1",
]

# Complete installation with all backends and features
all = [
    "rakam-system-vectorstore[postgres]",
    "rakam-system-vectorstore[faiss]",
    "rakam-system-vectorstore[local-embeddings]",
    "rakam-system-vectorstore[openai]",
    "rakam-system-vectorstore[cohere]",
    "rakam-system-vectorstore[loaders]",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# ref: https://github.com/astral-sh/uv/issues/6371
[tool.uv.sources]
rakam-system-core = { workspace = true }

[project.urls]
Homepage = "https://github.com/Rakam-AI/rakam_systems"
Documentation = "https://github.com/Rakam-AI/rakam_systems"
Repository = "https://github.com/Rakam-AI/rakam_systems"
Issues = "https://github.com/Rakam-AI/rakam_systems/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.setuptools.packages.find]
where = [".."]
include = ["rakam_system_vectorstore*", "rakam_system_core*"]

[tool.setuptools.package-data]
"rakam_system_vectorstore" = ["**/*.yaml", "**/*.yml", "**/*.json", "**/*.md"]
